# SpecPM

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  Package.swift  README.md  ROADMAP.md  compose.yaml  pyproject.toml  specpm.yaml
RFC/: SpecGraph-RFC-0001.md
SPECS/: 0001_Derived_Artifact_Profile_Decision.md  CLI_EXIT_CODES.md  JSON_CONTRACTS.md  PRD.md  RFC_0001_COVERAGE.md  WORKPLAN.md
landing_page/: Makefile  index.html  viewer.html
public-index/: accepted-packages.yml
scripts/: prepare_accepted_manifest_pr.py  render_pages.py  serve_public_index.py  validate_index_submission.py
skills/: README.md
specs/: 0001_Derived_Artifact_Profile_Decision.md  0002_Abstract_SpecPackage_Conformance_Target_Decision.md  0003_SpecPM_API_Versioning_Decision.md  0004_Public_Interface_Index_Evidence_Kind_Proposal.md  BASELINE_SUBMISSION_HANDOFF_PREFLIGHT.md  CLI_EXIT_CODES.md  CONFORMANCE.md  CURATED_ACCEPTED_ARTIFACT_LIFECYCLE.md  DEPLOY_FIRST.md  DOWNSTREAM_REGISTRY_CONSUMER_GUIDE.md  GENERATED_CANDIDATE_REFRESH_DECISION_POLICY.md  GITHUB_ACTIONS_MAINTENANCE.md  GITHUB_ACTIONS_PERMISSIONS.md  IDENTIFIER_MODEL.md  INDEX_SUBMISSION_FLOW.md  INTENT_DISCOVERY_BOUNDARY.md  INTENT_TAXONOMY_GOVERNANCE.md  JSON_CONTRACTS.md  MULTI_PACKAGE_PRODUCER_INTAKE.md  NAMESPACE_CLAIM_POLICY.md  PACKAGE_RELATIONS.md  PACKAGE_SETS.md  PACKAGE_SET_REGISTRY_METADATA.md  PACKAGE_SET_SEARCH.md  PACKAGE_SIGNING_REVOCATION.md  PRD.md  PRODUCER_BUNDLE_FIXTURE_POLICY.md  PRODUCER_BUNDLE_PROPOSAL_AUTOMATION.md  PRODUCER_BUNDLE_PROPOSAL_POLICY.md  PRODUCER_RECEIPTS.md  PUBLIC_ALPHA.md  (+15 more)
(+135 files in other folders)
